--- a/WebUI/index.html
+++ b/WebUI/index.html
@@ -7,7 +7,7 @@
     <title>AI Playground</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="lnl-background" id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
