62 - change output location for default backend
Signed-off-by: julianbollig <julian.bollig@tngtech.com>

--- a/service/static/assets/history_template.html
+++ b/service/static/assets/history_template.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>Generate History</title>
-    <link rel="stylesheet" id="embedpress_blocks-cgb-style-css-css" href="../../assets/history.css" type="text/css" media="all">
-    <script src="../../assets/history.js"></script>
+    <link rel="stylesheet" id="embedpress_blocks-cgb-style-css-css" href="{css_path}" type="text/css" media="all">
+    <script src="{js_path}"></script>
     <script src="./history.json"></script>
   </head>
   <body>
